--- a/client/src/app.css
+++ b/client/src/app.css
@@ -61,15 +61,16 @@
 /* Just for presentational purposes, please disregard in your own implementation */
 
 .box {
-    padding: 50px;
+    padding: 200px 50px;
     margin: 20px 0;
+    border-radius: 25px;
+    background-color: #a14ff9;
 }
 
 .box span {
     background-color: rgba(255, 255, 255, 0.5);
     display: inline-block;
     padding: 5px;
-    border-radius: 3px;
 }
 
 
